[build-system]
requires = ["poetry-core>=1.8.0", "wheel",]
build-backend = "poetry.core.masonry.api"



[tool.poetry]
name = "tesseract_env"
version = "0.1.0"
description = "A template Poetry project structure."

packages = [
    { include = "tesseract_env", from = "src" },
]

authors = ["hehonglu123 <hehonglu123@126.com>"]

include = ["CHANGELOG.md", "LICENSE", "py.typed",]
license = "BSD-3-Clause"
readme = "README.md"

homepage = "https://github.com/hehonglu123/tesseract-python"
repository = "https://github.com/hehonglu123/tesseract-python"
documentation = "https://github.com/hehonglu123/tesseract-python"




[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.24.4"
tesseract_robotics = "0.4.0"
tesseract_robotics_viewer = "0.2.5"
general-robotics-toolbox = "0.7.2"
